Fixed overflow problem

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,13 +1,16 @@
+
+
 h2{
     padding-top: 70px;
 }
 
 section{
-    min-height: 100%;
-    min-width: 100%;
+    height: 100vh ;
+    width: 100%;
+    overflow: hidden;
 }
 .row{
-    min-width: 100%;
+    width: 100%;
 }
 .nav-link{
     color: white;
